<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General App Strings -->
    <string name="app_name">Food With Friends</string>
    <string name="appVersion">CalorieCounter Beta v1: 4.30.2012</string>

    <!-- Game messages -->
    <string name="correctMessage">That\'s right,\u0020</string>
    <string name="correctIs">\u0020is\u0020</string>
    <string name="calories">\u0020calories.\u0020</string>
    <string name="closeMessage">That\'s close, but\u0020</string>
    <string name="closeLow">\u0020has slightly more calories than that.\u0020</string>
    <string name="closeHigh">\u0020has slightly fewer calories than that.\u0020</string>
    <string name="wrongMessage">Sorry, but\u0020</string>
    <string name="wrongLow">\u0020has more calories than that.\u0020</string>
    <string name="wrongHigh">\u0020has less calories than that.\u0020</string>
    <string name="instructionMessage">Enter an estimate for the number of calories in the pictured food.</string>
    <string name="calorieInputHint">Enter guess</string>
    <string name="food">Food:\u0020</string>
    <string name="scoreReportMessage1">You won\u0020</string>
    <string name="scoreReportMessage2">\u0020points for this guess.</string>

    <!-- Button Text -->
    <string name="submitButton">Submit</string>
    <string name="loginButton">Log in</string>
    <string name="quitButton">Quit</string>
    <string name="registerButton">Sign Up!</string>
    <string name="logoutButton">Logout</string>
    <string name="nextButton">Next</string>
    <string name="retryButton">Retry</string>
    <string name="startButton">Begin</string>
    <string name="addButton">Add</string>
    <string name="ok">Ok</string>

    <!-- Games -->
    <string name="game1">Calorie is Right!</string>
    <string name="game2">1-2-3</string>
    <string name="game3">One Right Price</string>
    <string name="game4">Meal with Friends</string>

    <!-- Login/Signup Activity -->
    <string name="welcome">Welcome to the Calorie Counter!</string>
    <string name="unTitle">Username:\u0020</string>
    <string name="pwTitle">Password:\u0020</string>
    <string name="fullnameTitle">Full Name:\u0020</string>
    <string name="unHint">Enter username</string>
    <string name="pwHint">Enter password</string>
    <string name="fullnameHint">Enter full name</string>
    <string name="signup">Sign Up!</string>
    <string name="back">Back</string>
    <string name="dupUsnMsg">Sorry, this username has already been taken.  Please try again.</string>
    <string name="invUsnMsg">Sorry, this is an invalid entry.  Please try again.</string>

    <!-- Admin Activity -->
    <string name="adminTitle">Admin: Select a User</string>
    <string name="usnTitle">Username:\u0020</string>
    <string name="scoreTitle">Score:\u0020</string>
    <string name="loginsTitle">Number of Logins:\u0020</string>
    <string name="plateTitle">Make Your Plate!:\u0020</string>
    <string name="countTitle">How Many Calories?:\u0020</string>
    <string name="ORPTitle">One Right Price:\u0020</string>
    <string name="rankingTitle">1-2-3:\u0020</string>
    <string name="attemptsTitle">Game Attempts</string>
    <string name="winsTitle">Game Wins</string>

    <!-- Home Activity -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logoutMessage">Are you sure you want to logout?  Your progress will be saved.</string>

    <!-- Ranking Game -->
    <string name="rankButtonUnset">-</string>
    <string name="rankButtonSubmit">Submit</string>
    <string name="rank1Button">1</string>
    <string name="rank2Button">2</string>
    <string name="rank3Button">3</string>
    <string name="rankOtherButton">-</string>
    <string name="rankXButton">X</string>
    <string name="rankSubmitButton">Submit</string>
    <string name="rankWelcomeMessage">Welcome to the Ranking Game!  In this game, you will rank three foods in order of increasing calorie content.</string>
    <string name="rankWelcomeMessage2">To rank foods, simply drag-and-drop the numbered colored squares at the bottom left to the gray slots on the right.</string>
    <string name="rankCorrectMessage">That\'s correct!</string>
    <string name="rankCorrectMessage2">\u0020You won\u0020</string>
    <string name="rankCorrectTries">\u0020tries.</string>
    <string name="rankWrongMessage">Sorry, that\'s not quite right.</string>
    <string name="rankQuitMessage">Are you sure you want to quit?</string>
    <string name="rankYesButton">Yes</string>
    <string name="rankNoButton">No</string>
    <string name="rankStartButton">Start</string>
    <string name="rankNextButton">Next</string>
    <string name="rankExitButton">Exit</string>
    <string name="rankRetryButton">Retry</string>
    <string name="rankPoints">\u0020point(s) for this game.</string>

    <!-- One Right Price -->
    <string name="oneWelcomeMessage">Welcome to the One Right Price!  In this game, you will be presented with two foods and one calorie value. You must match the calorie value with the correct food.</string>
    <string name="oneWelcomeMessage2">To match the calorie value to the food, drag-and-drop the calorie square at the bottom left to the correct gray slot on the right.</string>

    <!-- Price is Right -->
    <string name="mcfries">a large order of McDonalds\' fries</string>
    <string name="mcfries_simple">McFries</string>
    <string name="bkfries">a small order of Burger King fries</string>
    <string name="bkfries_simple">BkFries</string>
    <string name="redapple">a medium-sized red apple</string>
    <string name="redapple_simple">RedApple</string>
    <string name="banana">a banana</string>
    <string name="banana_simple">Banana</string>
    <string name="milkglass">an 8-ounce glass of skim milk</string>
    <string name="milkglass_simple">MilkGlass</string>
    <string name="tacobellburrito">a Taco Bell Beefy 5-Layer Burrito</string>
    <string name="tacobellburrito_simple">TacoBellBurrito</string>
    <string name="cokecan">a 12-ounce can of Coca-Cola</string>
    <string name="cokecan_simple">CokeCan</string>
    <string name="waterglass">an 8-ounce glass of water</string>
    <string name="waterglass_simple">WaterGlass</string>
    <string name="sliceofbread">one slice of whole wheat bread</string>
    <string name="sliceofbread_simple">WWBread</string>
    <string name="broccoli">one cup of steamed broccoli</string>
    <string name="broccoli_simple">Broccoli</string>
    <string name="cupofrice">one cup of brown rice</string>
    <string name="cupofrice_simple">CupRice</string>

    <!-- Plate game -->
    <string name="tableFood1Desc">First item:\u0020</string>
    <string name="tableFood2Desc">Second item:\u0020</string>
    <string name="tableFood3Desc">Third item:\u0020</string>
    <string name="tableTotalCalories">Calories for this meal:\u0020</string>
    <string name="tableSubmitOkay">Excellent, your meal will be sent to\u0020</string>
    <string name="tableSubmitFail">Please select three foods.</string>
    <string name="tableGuessOkay1">You won\u0020</string>
    <string name="tableGuessOkay2">\u0020points for that game.  Now, send a meal back to\u0020</string>
    <string name="tableGuessFail">Sorry, that guess was not valid.</string>
    <string name="tableFoodGuessHint">Enter a calorie guess</string>
    <string name="tableFoodInfo">This is\u0020</string>
    <string name="tableHomeWelcome">Continue an existing game:</string>
    <string name="tableBlankGame">Create a game below</string>
    <string name="tableStartNewGame">Create game</string>
    <string name="tableError">Error!</string>
    <string name="tableGameWith">Game with\u0020</string>
    <string name="tableGameWaiting">: waiting for turn</string>
    <string name="tableGameYourTurn">: your turn</string>
    <string name="tableNewGameHint">Enter a friend\'s username</string>
    <string name="tableCreateGameMessage">Create a new game with another user:</string>
    <string name="tableCreatingMealFor">Creating a meal for\u0020</string>
    <string name="tableGuessingMealFrom">Guessing a meal from\u0020</string>
    <string name="tableHomeInstructions1">Welcome to the meal game!  In this game, you and a friend take turns making meals for one another!</string>
    <string name="tableHomeInstructions2">To begin, either create a new game at the bottom, or continue a game you have already started.</string>
    <string name="tableCreateInstructions">Create a meal for your friend consisting of three foods.  Touch the food below to add it to the meal!</string>
    <string name="tableGuessInstructions">Enter your guess for the calories in each of the items your friend gave you.  Touch a food on the table for a short description.</string>

</resources>