<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <ImageView
        android:id="@+id/foodImage"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.90"
        android:contentDescription="@string/mcfries"
        android:scaleType="center"
        android:src="@drawable/mcfries" />

    <TextView
        android:id="@+id/foodName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mcfries" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/calorieInput"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" >
        </EditText>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:onClick="onSubmitEvent"
            android:text="@string/submitButton" />3

        <Button
            android:id="@+id/quit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:onClick="onQuitEvent"
            android:text="@string/quitButton" />
    </LinearLayout>
    
</LinearLayout>