<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/plateb" >
    
    <TextView
        android:id="@+id/tableTopText"
        android:layout_width="fill_parent"
        android:layout_height="20dip"
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="" />
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="150dip">
    
    	<ImageView
     	    android:id="@+id/tableFoodButton1"
     	    android:layout_marginLeft="20dip"
     	    android:layout_marginBottom="20dip"
           	android:layout_width="50dip"
        	android:layout_height="fill_parent"
        	android:onClick="onFood1Click"
        	android:layout_weight="0.33"
        	android:contentDescription="@string/tableFood1Desc" />
    
    	<ImageView
     	    android:id="@+id/tableFoodButton2"
     	    android:layout_marginBottom="20dip"
        	android:layout_height="fill_parent"
            android:layout_width="50dip"
        	android:onClick="onFood2Click"
        	android:layout_weight="0.33"
        	android:contentDescription="@string/tableFood1Desc" />	
    	
    	<ImageView
     	    android:id="@+id/tableFoodButton3"
     	    android:layout_marginRight="20dip"
     	    android:layout_marginBottom="20dip"
           	android:layout_width="50dip"
        	android:layout_height="fill_parent"
        	android:onClick="onFood3Click"
        	android:layout_weight="0.33"
        	android:contentDescription="@string/tableFood1Desc" />
   		
	</LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="40dip"
        android:layout_width="fill_parent">
    
    	<TextView
       		android:id="@+id/food1Desc"
        	android:layout_width="wrap_content"
        	android:gravity="center"
        	android:textColor="#000000"
        	android:textStyle="bold"
        	android:layout_height="fill_parent"
        	android:text="@string/tableFood1Desc"/>
    
    	<EditText
    	    android:id="@+id/food1Guess"
    	    android:layout_width="wrap_content"
    	    android:layout_height="fill_parent"
    	    android:inputType="number"
    	    android:hint="@string/tableFoodGuessHint"/>
    
    </LinearLayout>
     
     <LinearLayout
        android:orientation="horizontal"
        android:layout_height="40dip"
        android:layout_width="fill_parent">
    
    	<TextView
       		android:id="@+id/food2Desc"
        	android:layout_width="wrap_content"
        	android:gravity="center"
        	android:textColor="#000000"
       		android:textStyle="bold"
        	android:layout_height="fill_parent"
        	android:text="@string/tableFood2Desc"/>
    
    	<EditText
    	    android:id="@+id/food2Guess"
    	    android:layout_width="wrap_content"
    	    android:layout_height="fill_parent"
    	    android:inputType="number"
    	    android:hint="@string/tableFoodGuessHint"/>
    
    </LinearLayout>
    
     <LinearLayout
        android:orientation="horizontal"
        android:layout_height="40dip"
        android:layout_width="fill_parent">
    
    	<TextView
       		android:id="@+id/food3Desc"
        	android:layout_width="wrap_content"
        	android:gravity="center"
        	android:textColor="#000000"
        	android:textStyle="bold"
        	android:layout_height="fill_parent"
        	android:text="@string/tableFood3Desc"/>
    
    	<EditText
    	    android:id="@+id/food3Guess"
    	    android:layout_width="wrap_content"
    	    android:layout_height="fill_parent"
    	    android:inputType="number"
    	    android:hint="@string/tableFoodGuessHint"/>
    
    </LinearLayout>

    	
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dip">
        
        <Button
            android:id="@+id/guessSubmitButton"
            android:layout_width="100dip"
            android:layout_marginRight="50dip"
            android:layout_marginLeft="50dip"
            android:layout_height="fill_parent"
            android:onClick="onSubmitButtonClick"
            android:src="@drawable/sendplate"
            android:background="@drawable/sendplate" />
        
        <Button
            android:id="@+id/guessQuitButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="50dip"
            android:background="@drawable/quit"
            android:onClick="onQuitButtonClick"
            android:src="@drawable/quit" />
        
    </LinearLayout>

</LinearLayout>